# infinitumtech-Website

./: .gitignore  README.md  db.sqlite3  entrypoint.sh  pyproject.toml  requirements.txt
core/: settings.py  urls.py
media/resumes/: webrtc_internals_dump.txt
myApp/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
myApp/migrations/: 0001_initial.py  0002_alter_careerapplication_phone_alter_contact_phone.py  0003_project_facebook_project_linkedin_project_twitter_and_more.py  0004_project_description.py  0005_project_live.py
static/css/: plugins.css  privacy.css  projects.css  refund.css  styles.css  terms.css
static/js/: core.min.js  main.js
static/quform/css/: base.css
static/quform/js/: scripts.js
templates/: base.html
templates/myApp/: about.html  careers_form.html  contact.html  home.html  privacy_policy.html  refund_policy.html  service_detail.html  success_page.html  terms_conditions.html
