[tool.poetry]
name = "infinitum tech"
version = "0.1.0"
description = ""
authors = ["mahender.kurikyala11@gmail.com","lavudyasomani143@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
pillow = "^10.2.0"
django-phonenumber-field = "^7.3.0"
phonenumbers = "^8.13.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
